[tool.poetry]
name = "repl_python3_CHOKOLOKI"
version = "0.1.0"
description = ""
authors = ["IsergeMo <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"
Flask = "^2.0.1"
spotify = "^0.10.2"
pytz = "^2021.1"
giphy_client = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
